--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "react-portfolio",
+  "homepage": "http://mplumer.github.io/react-portfolio",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,9 +10,15 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^4.5.3",
+    "emailjs-com": "^2.6.4",
+    "jqeury": "0.0.1-security",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1"
+    "react-responsive-modal": "^6.0.1",
+    "react-scripts": "4.0.1",
+    "react-toastify": "^6.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -40,6 +47,8 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
   }
 }
